--- a/app/src/main/res/layout/activity_login_parent.xml
+++ b/app/src/main/res/layout/activity_login_parent.xml
@@ -81,17 +81,17 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:orientation="vertical"
-        android:layout_weight="70"
+        android:layout_weight="30"
         android:gravity="center_vertical">
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="24dp"
+            android:textSize="18sp"
             android:id="@+id/parent_login_btn"
             android:layout_margin="10dp"
             android:text="Login"
-            android:background="@drawable/border_2"/>
+            android:backgroundTint="#EE8C8585"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -126,6 +126,17 @@
 
 
     </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Forgot Password"
+        android:gravity="end"
+        android:id="@+id/forgot_password"
+        android:layout_marginTop="3dp"
+        android:textColor="@color/purple_200"
+        android:textSize="20sp" />
+
 
 
 </LinearLayout>
