--- a/app/src/main/res/layout/activity_parent_dashboard.xml
+++ b/app/src/main/res/layout/activity_parent_dashboard.xml
@@ -1,158 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/parent_drawerLayout"
     tools:context=".ParentDashboard"
     android:background="@drawable/bg_view_1">
 
-    <RelativeLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:id="@+id/fragment"/>
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="219dp"
-            android:layout_centerHorizontal="true"
-            android:id="@+id/person"
-            android:src="@drawable/person_200"/>
-
-        <GridLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:rowCount="2"
-            android:columnCount="2"
-            android:layout_below="@+id/person"
-            android:layout_centerInParent="true"
-            android:layout_margin="30dp"
-            android:layout_marginTop="0dp"
-            android:id="@+id/grid_layout">
-
-            <!-- Card 1 -->
-            <androidx.cardview.widget.CardView
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                app:cardCornerRadius="15dp"
-                android:layout_row="0"
-                android:layout_column="0"
-                android:layout_margin="12dp"
-                app:cardElevation="12dp">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-                    <ImageView
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
-                        android:src="@drawable/otp"
-                        android:layout_gravity="center_horizontal"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Request OTP"
-                        android:layout_gravity="center_horizontal"
-                        android:textSize="25sp"
-                        android:fontFamily="@font/almendra_bold_italic"/>
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
-
-            <!-- Card 2 -->
-            <androidx.cardview.widget.CardView
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                app:cardCornerRadius="15dp"
-                android:layout_row="0"
-                android:layout_column="1"
-                android:layout_margin="12dp"
-                app:cardElevation="12dp">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-                    <ImageView
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
-                        android:src="@drawable/confirm_activity"
-                        android:layout_gravity="center_horizontal"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Confirm Activity"
-                        android:gravity="center"
-                        android:layout_gravity="center_horizontal"
-                        android:textSize="25sp"
-                        android:fontFamily="@font/almendra_bold_italic"/>
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
-
-            <!-- Card 3 -->
-            <androidx.cardview.widget.CardView
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                app:cardCornerRadius="15dp"
-                android:layout_row="1"
-                android:layout_column="0"
-                android:layout_margin="12dp"
-                app:cardElevation="12dp">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-                    <ImageView
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
-                        android:src="@drawable/history"
-                        android:layout_gravity="center_horizontal"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Child's history"
-                        android:textAlignment="center"
-                        android:layout_gravity="center_horizontal"
-                        android:textSize="25sp"
-                        android:fontFamily="@font/almendra_bold_italic"/>
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
-
-            <!-- Card 4 -->
-            <androidx.cardview.widget.CardView
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                app:cardCornerRadius="15dp"
-                android:layout_row="1"
-                android:layout_column="1"
-                android:layout_margin="12dp"
-                app:cardElevation="12dp">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-                    <ImageView
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
-                        android:src="@drawable/location"
-                        android:layout_gravity="center_horizontal"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Maps and Locations"
-                        android:textAlignment="center"
-                        android:layout_gravity="center_horizontal"
-                        android:textSize="25sp"
-                        android:fontFamily="@font/almendra_bold_italic"/>
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
-        </GridLayout>
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/fragment"/>
-
-        <androidx.coordinatorlayout.widget.CoordinatorLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
 
             <com.google.android.material.bottomappbar.BottomAppBar
                 android:layout_width="match_parent"
@@ -170,7 +30,9 @@
                     android:background="@android:color/transparent"
                     app:labelVisibilityMode="labeled"
                     app:menu="@menu/main_menu"/>
+
+
             </com.google.android.material.bottomappbar.BottomAppBar>
-        </androidx.coordinatorlayout.widget.CoordinatorLayout>
-    </RelativeLayout>
-</androidx.drawerlayout.widget.DrawerLayout>
+
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
