--- a/app/src/main/res/layout/fragment_driver_registration.xml
+++ b/app/src/main/res/layout/fragment_driver_registration.xml
@@ -1,51 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
-    android:background="@color/teal_700">
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:src="@drawable/logo"
-        android:id="@+id/image"/>
+    tools:context=".DriverRegisterationFragment">
 
+    <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_marginTop="60dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_below="@+id/image"
-        android:id="@+id/textView1"
-        android:text="Parent Registration Portal"
-        android:textSize="34sp"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        />
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView1"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="100dp"
-        android:layout_gravity="center_horizontal"
-        android:text="Register New Driver"
-        android:textSize="24sp"
-        android:clickable="true"/>
+        android:layout_height="match_parent"
+        android:text="@string/hello_blank_fragment" />
 
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/button"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="50dp"
-        android:clickable="true"
-        android:layout_gravity="center_horizontal"
-        android:text="Register New Child"
-        android:textSize="24sp" />
-   
-</RelativeLayout>
+</FrameLayout>
