--- a/app/src/main/res/layout/activity_otp.xml
+++ b/app/src/main/res/layout/activity_otp.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="16dp"
     android:gravity="center"
@@ -10,27 +11,54 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Enter the OTP sent to your phone"
+        android:text="Enter Driver's Phone number"
         android:textSize="18sp"
         android:textColor="@android:color/white"
         android:layout_marginBottom="20dp"/>
 
-    <EditText
-        android:id="@+id/editText_otp"
-        android:layout_width="386dp"
-        android:layout_height="60dp"
-        android:layout_marginBottom="20dp"
-        android:background="@drawable/border"
-        android:hint="OTP"
-        android:inputType="number"
-        android:padding="10dp"
-        android:textSize="18sp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:weightSum="10"
+        android:id="@+id/contact_layout"
+        android:layout_below="@+id/textView_register_contact_number"
+        android:gravity="center">
+
+
+        <com.hbb20.CountryCodePicker
+            android:id="@+id/ccp"
+            android:layout_width="131dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/border"
+            android:elevation="5dp"
+            android:padding="10dp"
+            app:ccp_defaultPhoneCode="233"
+            app:ccp_arrowSize="25dp"
+            app:ccp_showFlag="true"
+            app:ccp_textSize="10dp" />
+
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:padding="10dp"
+            android:inputType="phone"
+            android:hint="Phone number"
+            android:layout_margin="10dp"
+            android:id="@+id/phone"
+            android:elevation="5dp"
+            android:background="@drawable/border"/>
+
+    </LinearLayout>
+
+
 
     <Button
         android:id="@+id/verify_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Verify OTP"
+        android:text="Hire driver"
         android:backgroundTint="@color/purple_200"
         android:textColor="@android:color/white"
         android:padding="10dp"/>
