--- a/app/src/main/res/layout/activity_message_item.xml
+++ b/app/src/main/res/layout/activity_message_item.xml
@@ -6,9 +6,11 @@
 
     <TextView
         android:id="@+id/messageTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="end"
         android:text="Message"
+        android:layout_margin="20dp"
         android:fontFamily="@font/abril_fatface"
         android:textSize="18sp"
         android:layout_marginTop="20dp"
