--- a/app/src/main/res/layout/activity_parent_dashboard.xml
+++ b/app/src/main/res/layout/activity_parent_dashboard.xml
@@ -1,38 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/parent_drawerLayout"
-    tools:context=".ParentDashboard"
-    android:background="@drawable/bg_view_1">
+    android:id="@+id/drawer_layout"
+    tools:context=".ParentDashboard">
 
-    <FrameLayout
+    <!-- Main Content -->
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/fragment"/>
+        android:id="@+id/coordinator_layout"
+        android:background="@drawable/bg_view_1">
 
+        <!-- Fragment Container -->
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/fragment" />
 
-            <com.google.android.material.bottomappbar.BottomAppBar
-                android:layout_width="match_parent"
+        <!-- Bottom App Bar -->
+        <com.google.android.material.bottomappbar.BottomAppBar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/bottomApp"
+            android:layout_gravity="bottom"
+            android:backgroundTint="@color/white"
+            app:fabCradleMargin="10dp"
+            app:fabCradleRoundedCornerRadius="50dp">
+
+            <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/bottomApp"
-                android:layout_gravity="bottom"
-                android:backgroundTint="@color/light_gray"
-                app:fabCradleMargin="10dp"
-                app:fabCradleRoundedCornerRadius="50dp">
+                android:layout_marginBottom="10dp"
+                android:layout_marginEnd="15dp"
+                android:id="@+id/bottom_navigation"
+                android:background="@color/white"
+                app:labelVisibilityMode="labeled"
+                app:menu="@menu/main_menu" />
 
-                <com.google.android.material.bottomnavigation.BottomNavigationView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/bottom_navigation"
-                    android:background="@android:color/transparent"
-                    app:labelVisibilityMode="labeled"
-                    app:menu="@menu/main_menu"/>
+        </com.google.android.material.bottomappbar.BottomAppBar>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
+    <!-- Navigation Drawer -->
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigation_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:itemTextColor="@color/purple_500"
+        app:itemIconTint="@color/purple_500"
+        app:menu="@menu/driver_menu"
+        app:headerLayout="@layout/header" />
 
-            </com.google.android.material.bottomappbar.BottomAppBar>
-
-
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
