--- a/app/src/main/res/layout/activity_parent_dashboard.xml
+++ b/app/src/main/res/layout/activity_parent_dashboard.xml
@@ -27,15 +27,15 @@
             android:id="@+id/bottomApp"
             android:layout_gravity="bottom"
             android:backgroundTint="@color/white"
+            app:fabAlignmentMode="center"
             app:fabCradleMargin="10dp"
             app:fabCradleRoundedCornerRadius="50dp">
 
             <com.google.android.material.bottomnavigation.BottomNavigationView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:layout_marginEnd="15dp"
                 android:id="@+id/bottom_navigation"
+                android:layout_gravity="center"
                 android:background="@color/white"
                 app:labelVisibilityMode="labeled"
                 app:menu="@menu/main_menu" />
