--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -1,82 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ContactActivity">
+    android:orientation="vertical"
+    android:padding="16dp">
 
-    <!-- Toolbar with the parent's name -->
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
+    <!-- ListView to display messages -->
+    <ListView
+        android:id="@+id/messages_list"
         android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:background="?attr/colorPrimary"
-        android:elevation="4dp"
-        android:titleTextColor="@android:color/white"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <!-- Parent contact number -->
-    <TextView
-        android:id="@+id/contactNumberTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Contact: "
-        android:textSize="16sp"
-        android:textColor="@android:color/black"
-        android:padding="8dp"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/messageRecyclerView" />
-
-    <!-- RecyclerView for displaying messages -->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/messageRecyclerView"
-        android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/contactNumberTextView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/messageInputLayout"
-        tools:ignore="NotSibling" />
+        android:layout_weight="1"
+        android:divider="@android:color/darker_gray"
+        android:dividerHeight="1dp" />
 
-    <!-- LinearLayout for the input field and send button -->
+    <!-- Message input area -->
     <LinearLayout
-        android:id="@+id/messageInputLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        android:gravity="center_vertical">
 
-        <!-- EditText for typing new messages -->
+        <!-- Input for typing a message -->
         <EditText
-            android:id="@+id/messageInput"
+            android:id="@+id/message_input"
             android:layout_width="0dp"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:hint="Type a message"
-            android:padding="10dp"
-            android:background="@drawable/border"
-            android:maxLines="1"
-            android:inputType="text" />
+            android:hint="Type your message"
+            android:padding="8dp"
+            android:background="@android:drawable/edit_text"
+            android:inputType="text"
+            android:layout_marginEnd="8dp" />
 
-        <!-- Send Button -->
+        <!-- Button to send the message -->
         <Button
-            android:id="@+id/sendButton"
+            android:id="@+id/send_message_button"
             android:layout_width="wrap_content"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:text="Send"
+            android:backgroundTint="@color/purple_500"
             android:textColor="@android:color/white"
-            android:background="@color/purple_500"
-            android:padding="10dp" />
+            android:paddingHorizontal="16dp"
+            android:paddingVertical="8dp" />
     </LinearLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
