--- a/app/src/main/res/layout/fragment_dhome.xml
+++ b/app/src/main/res/layout/fragment_dhome.xml
@@ -15,24 +15,51 @@
         android:background="@drawable/bg_view_1">
 
 
-
         <!-- Title Section -->
+        <RelativeLayout
+            android:id="@+id/pro"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:background="@color/teal_700"
+            android:padding="15dp">
+
+            <!-- Fullname TextView -->
+            <TextView
+                android:id="@+id/show_fullname"
+                android:layout_width="250dp"
+                android:layout_height="80dp"
+                android:gravity="center_vertical"
+                android:text="Loading"
+                android:textSize="24sp" />
+
+            <!-- Profile Image -->
+            <ImageView
+                android:id="@+id/profile2"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_alignEnd="@+id/show_fullname"
+                android:layout_marginEnd="-100dp"
+                android:background="@drawable/circ" />
+        </RelativeLayout>
+
         <LinearLayout
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:layout_below="@+id/pro"
             android:layout_margin="10dp">
 
             <TextView
                 android:id="@+id/top_view2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="24sp"
                 android:gravity="center"
                 android:text="DRIVER DASHBOARD"
-                android:textStyle="bold"
-                android:textColor="@color/black" />
+                android:textColor="@color/black"
+                android:textSize="24sp"
+                android:textStyle="bold" />
         </LinearLayout>
 
         <!-- Centered GridLayout -->
@@ -40,104 +67,42 @@
             android:id="@+id/grid_layout"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:rowCount="3"
+            android:layout_below="@id/pro"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="30dp"
             android:columnCount="2"
-            android:layout_below="@id/title"
-            android:layout_centerInParent="true">
+            android:rowCount="3">
 
-            <!-- Card 1: Home -->
-            <androidx.cardview.widget.CardView
-                android:id="@+id/card_home"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                app:cardCornerRadius="15dp"
-                app:cardElevation="12dp"
-                android:layout_margin="12dp"
-                android:clickable="true">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:gravity="center">
-
-                    <ImageView
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
-                        android:src="@drawable/ic_home"
-                        android:layout_gravity="center_horizontal" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Home"
-                        android:layout_gravity="center_horizontal"
-                        android:textSize="16sp"
-                        android:fontFamily="@font/almendra_bold_italic" />
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
-
-            <!-- Card 2: Verify OTP -->
-            <androidx.cardview.widget.CardView
-                android:id="@+id/verify_otp"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                app:cardCornerRadius="15dp"
-                app:cardElevation="12dp"
-                android:layout_margin="12dp"
-                android:clickable="true">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:gravity="center">
-
-                    <ImageView
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
-                        android:src="@drawable/otp"
-                        android:layout_gravity="center_horizontal" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Verify OTP"
-                        android:layout_gravity="center_horizontal"
-                        android:textSize="16sp"
-                        android:fontFamily="@font/almendra_bold_italic" />
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
 
             <!-- Card 3: Maps -->
             <androidx.cardview.widget.CardView
                 android:id="@+id/card_map"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
-                app:cardCornerRadius="15dp"
-                app:cardElevation="12dp"
                 android:layout_margin="12dp"
-                android:clickable="true">
+                android:clickable="true"
+                app:cardCornerRadius="15dp"
+                app:cardElevation="12dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:gravity="center">
+                    android:gravity="center"
+                    android:orientation="vertical">
 
                     <ImageView
                         android:layout_width="80dp"
                         android:layout_height="80dp"
-                        android:src="@drawable/maps"
-                        android:layout_gravity="center_horizontal" />
+                        android:layout_gravity="center_horizontal"
+                        android:src="@drawable/maps" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Maps and Locations"
                         android:layout_gravity="center_horizontal"
-                        android:textSize="16sp"
-                        android:fontFamily="@font/almendra_bold_italic" />
+                        android:fontFamily="@font/almendra_bold_italic"
+                        android:text="Maps and Locations"
+                        android:textSize="16sp" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
@@ -146,30 +111,30 @@
                 android:id="@+id/confirm_activity"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
-                app:cardCornerRadius="15dp"
-                app:cardElevation="12dp"
                 android:layout_margin="12dp"
-                android:clickable="true">
+                android:clickable="true"
+                app:cardCornerRadius="15dp"
+                app:cardElevation="12dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:gravity="center">
+                    android:gravity="center"
+                    android:orientation="vertical">
 
                     <ImageView
                         android:layout_width="80dp"
                         android:layout_height="80dp"
-                        android:src="@drawable/confirm_activity"
-                        android:layout_gravity="center_horizontal" />
+                        android:layout_gravity="center_horizontal"
+                        android:src="@drawable/confirm_activity" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Confirm Activity"
                         android:layout_gravity="center_horizontal"
-                        android:textSize="16sp"
-                        android:fontFamily="@font/almendra_bold_italic" />
+                        android:fontFamily="@font/almendra_bold_italic"
+                        android:text="Confirm Activity"
+                        android:textSize="16sp" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
@@ -178,30 +143,30 @@
                 android:id="@+id/card_contact"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
-                app:cardCornerRadius="15dp"
-                app:cardElevation="12dp"
                 android:layout_margin="12dp"
-                android:clickable="true">
+                android:clickable="true"
+                app:cardCornerRadius="15dp"
+                app:cardElevation="12dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:gravity="center">
+                    android:gravity="center"
+                    android:orientation="vertical">
 
                     <ImageView
                         android:layout_width="80dp"
                         android:layout_height="80dp"
-                        android:src="@drawable/phone_24"
-                        android:layout_gravity="center_horizontal" />
+                        android:layout_gravity="center_horizontal"
+                        android:src="@drawable/phone_24" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Contact"
                         android:layout_gravity="center_horizontal"
-                        android:textSize="16sp"
-                        android:fontFamily="@font/almendra_bold_italic" />
+                        android:fontFamily="@font/almendra_bold_italic"
+                        android:text="Contact"
+                        android:textSize="16sp" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
@@ -210,30 +175,30 @@
                 android:id="@+id/card_terms"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
-                app:cardCornerRadius="15dp"
-                app:cardElevation="12dp"
                 android:layout_margin="12dp"
-                android:clickable="true">
+                android:clickable="true"
+                app:cardCornerRadius="15dp"
+                app:cardElevation="12dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:gravity="center">
+                    android:gravity="center"
+                    android:orientation="vertical">
 
                     <ImageView
                         android:layout_width="80dp"
                         android:layout_height="80dp"
-                        android:src="@drawable/terms"
-                        android:layout_gravity="center_horizontal" />
+                        android:layout_gravity="center_horizontal"
+                        android:src="@drawable/terms" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Terms and Conditions"
                         android:layout_gravity="center_horizontal"
-                        android:textSize="16sp"
-                        android:fontFamily="@font/almendra_bold_italic" />
+                        android:fontFamily="@font/almendra_bold_italic"
+                        android:text="Terms and Conditions"
+                        android:textSize="16sp" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
