--- a/app/src/main/res/layout/fragment_parent_home.xml
+++ b/app/src/main/res/layout/fragment_parent_home.xml
@@ -61,7 +61,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Request OTP"
+                    android:text="Hire driver"
                     android:layout_gravity="center_horizontal"
                     android:textSize="25sp"
                     android:fontFamily="@font/almendra_bold_italic"/>
